--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -17,5 +17,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.5'
+    implementation 'org.ftclib.ftclib:core:2.1.1' // core:w
+
+
 }
 
